# Pomo-20-20

./: .gitignore  CONTRIBUTING.md  README.MD  index.html  package-lock.json  package.json  vite.config.ts
public/sounds/: README.md
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: Controls.tsx  PhaseTimer.tsx  TimerShell.tsx  Tooltip.tsx
src/config/: timerConfig.ts
src/hooks/: useAudio.ts  useNotifications.ts  usePomodoro2020Timer.ts
src/utils/: format.ts
