[package]
name = "twenty-20-focus-timer"
version = "0.1.0"
description = "A Pomodoro timer with 20-20-20 eye break awareness"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri = { version = "2.9.2", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
